Feat : 각종 기능 추가 (#84)